Add damage numbers

--- a/emil-gibb/Assembly-CSharp.csproj
+++ b/emil-gibb/Assembly-CSharp.csproj
@@ -57,6 +57,8 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\CombatHandler.cs" />
      <Compile Include="Assets\Scripts\CreateEncounter.cs" />
+     <Compile Include="Assets\Scripts\DamageNumber.cs" />
+     <Compile Include="Assets\Scripts\DamageNumberHandler.cs" />
      <Compile Include="Assets\Scripts\GridCell.cs" />
      <Compile Include="Assets\Scripts\HealthBar.cs" />
      <Compile Include="Assets\Scripts\InfluenceMap.cs" />
