--- a/emil-gibb/Assembly-CSharp.csproj
+++ b/emil-gibb/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Enums\UnitStateEnum.cs" />
     <Compile Include="Assets\Scripts\EventManager.cs" />
+    <Compile Include="Assets\Scripts\MapNode.cs" />
     <Compile Include="Assets\Scripts\New\CombatHandlerNew.cs" />
     <Compile Include="Assets\Scripts\New\TileManager.cs" />
     <Compile Include="Assets\Scripts\Old\CombatHandler.cs" />
@@ -85,6 +86,7 @@
     <Compile Include="Assets\Scripts\Rotation.cs" />
     <Compile Include="Assets\Scripts\SelectedUnitUiHandler.cs" />
     <Compile Include="Assets\Scripts\UnitHandler.cs" />
+    <Compile Include="Assets\Scripts\WorldMap.cs" />
     <Reference Include="UnityEngine">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.2f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
